Fix the logo spacing on Safari

--- a/_harp/public/styles/pages/_tutorials.scss
+++ b/_harp/public/styles/pages/_tutorials.scss
@@ -16,7 +16,12 @@
     margin-right: 30px;
   }
 
-  .navbar-brand,
+  .navbar-brand {
+    height: 100px;
+    width: 100px;
+    margin-left: 0 !important;
+  }
+
   .navbar-nav li a {
     line-height: 100px;
     height: 100px;
